# GameEngines

./: CMakeLists.txt  CMakePresets.json  Makefile  config.hpp  config.txt  main.cpp
dependencies/: CMakeLists.txt
src/: BaseClass.hpp  CMakeLists.txt  Config.cpp  Config.hpp  GUISettings.hpp  Logo.cpp  Logo.hpp  Text.cpp  Text.hpp  Window.cpp  Window.hpp  config.cpp  config.hpp  main.cpp
